--- a/app/src/main/res/layout/activity_workout_home.xml
+++ b/app/src/main/res/layout/activity_workout_home.xml
@@ -56,7 +56,7 @@
             android:contentDescription="@string/profile_text"
             android:focusable="true"
             android:onClick="settings"
-            app:srcCompat="@android:drawable/ic_menu_manage" />
+            app:srcCompat="@drawable/setings_btn" />
 
     </LinearLayout>
 
@@ -102,13 +102,13 @@
         android:id="@+id/create_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        app:backgroundTint="@color/transparency_white"
-        app:srcCompat="@android:drawable/ic_menu_add"
-        android:onClick="createPlan"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/toolbar"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/side_margin"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="@dimen/side_margin"
+        android:layout_marginBottom="@dimen/toolbar"
+        android:clickable="true"
+        android:onClick="createPlan"
+        app:backgroundTint="@color/transparency_white"
+        app:srcCompat="@drawable/plus_btn" />
 
 </RelativeLayout>
