--- a/app/src/main/res/layout/activity_start_exercise.xml
+++ b/app/src/main/res/layout/activity_start_exercise.xml
@@ -56,7 +56,7 @@
             android:contentDescription="@string/profile_text"
             android:focusable="true"
             android:onClick="settings"
-            app:srcCompat="@android:drawable/ic_menu_manage" />
+            app:srcCompat="@drawable/setings_btn" />
 
     </LinearLayout>
 
