--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -61,7 +61,7 @@
         android:layout_marginBottom="@dimen/new_margin"
         android:paddingVertical="@dimen/new_margin"
         android:orientation="horizontal"
-        android:weightSum="4">
+        android:weightSum="5">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -84,7 +84,7 @@
             android:layout_height="match_parent"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="tracker"
+            android:onClick="workouts"
             android:layout_weight="1"
             app:srcCompat="@drawable/workouts_btn"/>
         <ImageView
@@ -92,8 +92,16 @@
             android:layout_height="match_parent"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="tracker"
+            android:onClick="diets"
             android:layout_weight="1"
             app:srcCompat="@drawable/diets_btn"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="profile"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/profile_btn"/>
     </LinearLayout>
 </RelativeLayout>
