--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,11 +15,12 @@
 
         <ImageView
             android:id="@+id/back_button"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center"
             android:layout_weight="1"
             android:clickable="true"
+            android:focusable="true"
             android:contentDescription="@string/back_text"
             android:onClick="goBack"
             app:srcCompat="@drawable/abc_vector_test" />
