--- a/app/src/main/res/layout/activity_singup2.xml
+++ b/app/src/main/res/layout/activity_singup2.xml
@@ -92,7 +92,7 @@
             android:background="@color/transparency_white"
             android:paddingHorizontal="@dimen/side_margin"
             android:layout_gravity="center_horizontal"
-            android:onClick="home" />
+            android:onClick="Singup" />
     </LinearLayout>
     <!--
 
