--- a/app/src/main/res/layout/activity_create_diet.xml
+++ b/app/src/main/res/layout/activity_create_diet.xml
@@ -42,103 +42,103 @@
             android:layout_weight="1"/>
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar_workout"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
-        <TextView
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_above="@id/start"
+        android:layout_below="@id/toolbar_workout">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/name"
-            android:textSize="@dimen/normal_text"
-            android:layout_marginTop="@dimen/new_margin"/>
-        <EditText
-            android:id="@+id/plan_name_creator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/header_text"
-            android:text="@string/name"
-            android:background="@color/transparency_white"
-            android:layout_marginTop="@dimen/new_margin"
-            android:layout_marginBottom="@dimen/top_margin"
-            android:inputType="text"
-            android:textColor="@color/colorWhite"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/objective_form"
-            android:textSize="@dimen/normal_text"
-            android:layout_marginBottom="@dimen/new_margin"
-            />
-
-        <androidx.gridlayout.widget.GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:filterTouchesWhenObscured="true"
-            android:background="#00000000"
-            app:columnCount="2"
-            android:layout_marginBottom="@dimen/top_margin">
-            <Button
-                android:layout_width="@dimen/button_size"
-                android:layout_height="match_parent"
-                android:background="@color/transparency_white"
-                android:text="@string/option1_obj"/>
-
-            <Button
-                android:layout_width="@dimen/button_size"
-                android:layout_height="match_parent"
-                android:background="@color/transparency_white"
-                android:text="@string/option2_obj" />
-            <Button
-                android:layout_width="@dimen/button_size"
-                android:layout_height="match_parent"
-                android:background="@color/transparency_white"
-                android:text="@string/objective1"/>
-            <Button
-                android:layout_width="@dimen/button_size"
-                android:layout_height="match_parent"
-                android:background="@color/transparency_white"
-                android:text="@string/objective2"/>
-        </androidx.gridlayout.widget.GridLayout>
-        
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/vegan_veget"
-            android:textSize="@dimen/normal_text"
-            android:layout_marginBottom="@dimen/new_margin"/>
-
-        <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
-            <RadioButton
+            android:layout_below="@id/toolbar_workout"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
-                android:text="@string/negation"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/header_text"/>
-            <RadioButton
+                android:text="@string/name"
+                android:textSize="@dimen/normal_text"
+                android:layout_marginTop="@dimen/new_margin"/>
+            <EditText
+                android:id="@+id/plan_name_creator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
-                android:text="@string/veget"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/header_text"/>
-            <RadioButton
+                android:textSize="@dimen/header_text"
+                android:text="@string/name"
+                android:background="@color/transparency_white"
+                android:layout_marginTop="@dimen/new_margin"
+                android:layout_marginBottom="@dimen/top_margin"
+                android:inputType="text"
+                android:textColor="@color/colorWhite"/>
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
-                android:text="@string/vegan"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/header_text"/>
-
-        </RadioGroup>
-
-    </LinearLayout>
+                android:text="@string/objective_form"
+                android:textSize="@dimen/normal_text"
+                android:layout_marginBottom="@dimen/new_margin"
+                />
+            <androidx.gridlayout.widget.GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:filterTouchesWhenObscured="true"
+                android:background="#00000000"
+                app:columnCount="2"
+                android:layout_marginBottom="@dimen/top_margin">
+                <Button
+                    android:layout_width="@dimen/button_size"
+                    android:layout_height="match_parent"
+                    android:background="@color/transparency_white"
+                    android:text="@string/option1_obj"/>
+                <Button
+                    android:layout_width="@dimen/button_size"
+                    android:layout_height="match_parent"
+                    android:background="@color/transparency_white"
+                    android:text="@string/option2_obj" />
+                <Button
+                    android:layout_width="@dimen/button_size"
+                    android:layout_height="match_parent"
+                    android:background="@color/transparency_white"
+                    android:text="@string/objective1"/>
+                <Button
+                    android:layout_width="@dimen/button_size"
+                    android:layout_height="match_parent"
+                    android:background="@color/transparency_white"
+                    android:text="@string/objective2"/>
+            </androidx.gridlayout.widget.GridLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/vegan_veget"
+                android:textSize="@dimen/normal_text"
+                android:layout_marginBottom="@dimen/new_margin"/>
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
+                    android:text="@string/negation"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/header_text"/>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
+                    android:text="@string/veget"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/header_text"/>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
+                    android:text="@string/vegan"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/header_text"/>
+            </RadioGroup>
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:layout_width="wrap_content"
