--- a/app/src/main/res/layout/activity_create_plan.xml
+++ b/app/src/main/res/layout/activity_create_plan.xml
@@ -41,121 +41,119 @@
             android:textSize="@dimen/header_text"
             android:layout_weight="1"/>
     </LinearLayout>
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar_workout"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/plan_name_form"
-            android:textSize="@dimen/normal_text"
-            android:layout_marginTop="@dimen/new_margin"/>
-        <EditText
-            android:id="@+id/plan_name_creator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/header_text"
-            android:text="@string/plan_name_form"
-            android:background="@color/transparency_white"
-            android:layout_marginTop="@dimen/new_margin"
-            android:layout_marginBottom="@dimen/top_margin"
-            android:inputType="text"
-            android:textColor="@color/colorWhite"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/objective_form"
-            android:textSize="@dimen/normal_text"
-            android:layout_marginBottom="@dimen/new_margin"
-            />
-
-        <androidx.gridlayout.widget.GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:filterTouchesWhenObscured="true"
-            android:background="#00000000"
-            app:columnCount="2"
-            android:layout_marginBottom="@dimen/top_margin">
-            <Button
-                android:layout_width="@dimen/button_size"
-                android:layout_height="match_parent"
-                android:background="@color/transparency_white"
-                android:text="@string/option1_obj"/>
-
-            <Button
-                android:layout_width="@dimen/button_size"
-                android:layout_height="match_parent"
-                android:background="@color/transparency_white"
-                android:text="@string/option2_obj" />
-            <Button
-                android:layout_width="@dimen/button_size"
-                android:layout_height="match_parent"
-                android:background="@color/transparency_white"
-                android:text="@string/option3_obj"/>
-            <Button
-                android:layout_width="@dimen/button_size"
-                android:layout_height="match_parent"
-                android:background="@color/transparency_white"
-                android:text="@string/option4_obj"/>
-        </androidx.gridlayout.widget.GridLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dxw"
-            android:textSize="@dimen/normal_text"
-            android:layout_marginBottom="@dimen/new_margin"
-            />
-
-        <Spinner
-            android:id="@+id/spinner_days"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/top_margin"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/skill_form"
-            android:textSize="@dimen/normal_text"
-            android:layout_marginBottom="@dimen/new_margin"
-            />
-
-
-        <RelativeLayout
+        android:layout_above="@id/start"
+        android:layout_below="@id/toolbar_workout">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <SeekBar
-                android:id="@+id/seekBar"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:max="2"
-                android:progress="0"
-                android:layout_marginTop="@dimen/new_margin"
-                android:layout_centerHorizontal="true"/>
-
-            <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/rookie"
-            android:layout_alignLeft="@id/seekBar"
-            android:layout_below="@id/seekBar"
-            android:textSize="@dimen/header_text"/>
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar_workout"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/pro"
-                android:layout_alignRight="@id/seekBar"
-                android:layout_below="@id/seekBar"
-                android:textSize="@dimen/header_text"/>
-        </RelativeLayout>
-    </LinearLayout>
-
+                android:text="@string/plan_name_form"
+                android:textSize="@dimen/normal_text"
+                android:layout_marginTop="@dimen/new_margin"/>
+            <EditText
+                android:id="@+id/plan_name_creator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/header_text"
+                android:text="@string/plan_name_form"
+                android:background="@color/transparency_white"
+                android:layout_marginTop="@dimen/new_margin"
+                android:layout_marginBottom="@dimen/top_margin"
+                android:inputType="text"
+                android:textColor="@color/colorWhite"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/objective_form"
+                android:textSize="@dimen/normal_text"
+                android:layout_marginBottom="@dimen/new_margin"/>
+            <androidx.gridlayout.widget.GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:filterTouchesWhenObscured="true"
+                android:background="#00000000"
+                app:columnCount="2"
+                android:layout_marginBottom="@dimen/top_margin">
+                <Button
+                    android:layout_width="@dimen/button_size"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="@color/transparency_white"
+                    android:text="@string/option1_obj"
+                    android:onClick="changeOb"/>
+                <Button
+                    android:layout_width="@dimen/button_size"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="@color/transparency_white"
+                    android:text="@string/option2_obj"
+                    android:onClick="changeOb"/>
+                <Button
+                    android:layout_width="@dimen/button_size"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="@color/transparency_white"
+                    android:text="@string/option3_obj"
+                    android:onClick="changeOb"/>
+                <Button
+                    android:layout_width="@dimen/button_size"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="@color/transparency_white"
+                    android:focusedByDefault="true"
+                    android:text="@string/option4_obj"
+                    android:onClick="changeOb"/>
+            </androidx.gridlayout.widget.GridLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dxw"
+                android:textSize="@dimen/normal_text"
+                android:layout_marginBottom="@dimen/new_margin"/>
+            <Spinner
+                android:id="@+id/spinner_days"
+                android:layout_width="@dimen/button_size"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/top_margin"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/skill_form"
+                android:textSize="@dimen/normal_text"
+                android:layout_marginBottom="@dimen/new_margin"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <SeekBar
+                    android:id="@+id/seekBar"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:max="2"
+                    android:progress="0"
+                    android:layout_marginTop="@dimen/new_margin"
+                    android:layout_centerHorizontal="true"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/rookie"
+                    android:layout_alignLeft="@id/seekBar"
+                    android:layout_below="@id/seekBar"
+                    android:textSize="@dimen/header_text"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pro"
+                    android:layout_alignRight="@id/seekBar"
+                    android:layout_below="@id/seekBar"
+                    android:textSize="@dimen/header_text"/>
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
     <Button
         android:layout_width="wrap_content"
         android:paddingHorizontal="@dimen/side_margin"
