--- a/app/src/main/res/layout/activity_create_plan.xml
+++ b/app/src/main/res/layout/activity_create_plan.xml
@@ -159,8 +159,7 @@
         android:paddingHorizontal="@dimen/side_margin"
         android:id="@+id/start"
         android:layout_height="wrap_content"
-        android:background="@color/transparency_white"
-        android:orientation="horizontal"
+        android:backgroundTint="@color/transparency_white"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/side_margin"
         android:text="@string/create_plan_title"
