--- a/app/src/main/res/layout/activity_start_exercise.xml
+++ b/app/src/main/res/layout/activity_start_exercise.xml
@@ -137,7 +137,7 @@
             android:textSize="@dimen/header_text"/>
         <Button
             android:id="@+id/pause"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/buton_pading"
             android:layout_height="wrap_content"
             android:background="@color/transparency_white"
             android:layout_toRightOf="@id/timer_text"
@@ -145,20 +145,18 @@
             android:layout_alignBaseline="@id/timer_text"
             android:text="@string/pause"
             android:textSize="@dimen/small_text"
-            android:onClick="pauseTimer"
-            android:paddingHorizontal="@dimen/separation"/>
+            android:onClick="pauseTimer"/>
 
         <Button
             android:id="@+id/finish"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/buton_pading"
             android:layout_height="wrap_content"
             android:background="@color/transparency_white"
             android:layout_below="@id/pause"
             android:layout_alignBaseline="@id/chrono"
             android:layout_alignLeft="@id/pause"
             android:text="@string/finish"
-            android:onClick="finishTimer"
-            android:paddingHorizontal="@dimen/separation"/>
+            android:onClick="finishTimer"/>
 
 
     </RelativeLayout>
