--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -16,6 +16,7 @@
     <dimen name="toolbar">60dp</dimen>
     <dimen name="side_margin2">70dp</dimen>
     <dimen name="btn">100dp</dimen>
+    <dimen name="buton_pading">125dp</dimen>
     <dimen name="button_size">140dp</dimen>
     <dimen name="sidex2">150dp</dimen>
     <dimen name="bot_margin">200dp</dimen>
