Actualizado Controlador (Signleton)

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -67,6 +67,14 @@
             android:text="@string/setting2"
             android:layout_marginBottom="@dimen/margin2"/>
         <Button
+            android:id="@+id/button6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/transparency_white"
+            android:textSize="@dimen/header_text"
+            android:text="@string/setting6"
+            android:layout_marginBottom="@dimen/margin2"/>
+        <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
