--- a/app/src/main/res/layout/activity_workout_home.xml
+++ b/app/src/main/res/layout/activity_workout_home.xml
@@ -70,6 +70,7 @@
         android:paddingBottom="@dimen/top_margin">
 
         <LinearLayout
+            android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
