--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -113,7 +113,7 @@
                 android:layout_alignLeft="@id/btn_pause"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10000"
+                android:text="Test text"
                 />
         </RelativeLayout>
 
