--- a/app/src/main/res/layout/activity_singup2.xml
+++ b/app/src/main/res/layout/activity_singup2.xml
@@ -134,6 +134,15 @@
         android:layout_marginBottom="@dimen/side_margin"
         android:layout_centerHorizontal="true"
         android:onClick="Singup"/>
+    <ProgressBar
+        android:id="@+id/misTetas"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:layout_above="@id/login_btn"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        />
 </RelativeLayout>
 
 
