Mejoraos tos los botones

--- a/app/src/main/res/layout/activity_start_exercise.xml
+++ b/app/src/main/res/layout/activity_start_exercise.xml
@@ -84,7 +84,8 @@
             android:id="@+id/pause"
             android:layout_width="@dimen/buton_pading"
             android:layout_height="wrap_content"
-            android:background="@color/transparency_white"
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/button_shape"
             android:layout_toRightOf="@id/timer_text"
             android:layout_marginLeft="@dimen/separation"
             android:layout_alignBaseline="@id/timer_text"
@@ -96,7 +97,8 @@
             android:id="@+id/finish"
             android:layout_width="@dimen/buton_pading"
             android:layout_height="wrap_content"
-            android:background="@color/transparency_white"
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/button_shape"
             android:layout_below="@id/pause"
             android:layout_alignBaseline="@id/chrono"
             android:layout_alignLeft="@id/pause"
