--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -40,30 +40,35 @@
         android:orientation="vertical"
         android:layout_centerInParent="true">
         <EditText
+            android:textAlignment="viewStart"
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="@dimen/textbox_height"
-            android:background="@color/transparency_white"
-            android:hint="@string/user"
+            android:hint="@string/e_mail"
+            android:inputType="textEmailAddress"
+            android:textColorHint="@color/colorWhite"
             android:paddingHorizontal="@dimen/new_margin"
             android:textStyle="bold"
             android:layout_marginBottom="@dimen/side_margin"/>
         <EditText
+            android:textAlignment="viewStart"
             android:id="@+id/Upassword"
             android:layout_width="match_parent"
             android:layout_height="@dimen/textbox_height"
             android:hint="@string/passw"
-            android:background="@color/transparency_white"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorWhite"
             android:textStyle="bold"
             android:paddingHorizontal="@dimen/new_margin"
             android:layout_marginBottom="@dimen/side_margin"
             android:inputType="textPassword"/>
         <Button
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/button_shape"
             android:id="@+id/login_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login_title"
-            android:background="@color/transparency_white"
             android:paddingHorizontal="@dimen/side_margin"
             android:layout_gravity="center_horizontal"
             android:onClick="login" />
