--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -51,26 +51,30 @@
         android:paddingHorizontal="@dimen/side_margin">
 
         <Button
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/button_shape"
             android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/transparency_white"
-            android:textSize="@dimen/header_text"
+            android:layout_marginBottom="@dimen/margin2"
             android:text="@string/setting1"
-            android:layout_marginBottom="@dimen/margin2"/>
+            android:textSize="@dimen/header_text" />
+
         <Button
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/button_shape"
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/transparency_white"
             android:textSize="@dimen/header_text"
             android:text="@string/setting2"
             android:layout_marginBottom="@dimen/margin2"/>
         <Button
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/button_shape"
             android:id="@+id/button6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/transparency_white"
             android:textSize="@dimen/header_text"
             android:text="@string/setting6"
             android:layout_marginBottom="@dimen/margin2"/>
@@ -78,7 +82,8 @@
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/transparency_white"
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/button_shape"
             android:textSize="@dimen/header_text"
             android:text="@string/setting3"
             android:layout_marginBottom="@dimen/margin2"/>
@@ -86,7 +91,8 @@
             android:id="@+id/button4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/transparency_white"
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/button_shape"
             android:textSize="@dimen/header_text"
             android:text="@string/setting4"
             android:layout_marginBottom="@dimen/margin2"/>
@@ -94,7 +100,8 @@
             android:id="@+id/button5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/transparency_white"
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/button_shape"
             android:textSize="@dimen/header_text"
             android:text="@string/setting5"
             android:onClick="signOut"
