--- a/app/src/main/res/layout/activity_signup1.xml
+++ b/app/src/main/res/layout/activity_signup1.xml
@@ -50,7 +50,7 @@
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="@dimen/textbox_height"
-            android:background="@color/transparency_white"
+            android:textColorHint="@color/colorWhite"
             android:hint="@string/e_mail"
             android:paddingHorizontal="@dimen/new_margin"
             android:textStyle="bold"
@@ -62,7 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/textbox_height"
             android:layout_marginBottom="@dimen/margin2"
-            android:background="@color/transparency_white"
+            android:textColorHint="@color/colorWhite"
             android:hint="@string/full_name"
             android:inputType="textPersonName"
             android:paddingHorizontal="@dimen/new_margin"
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/textbox_height"
             android:layout_marginBottom="@dimen/margin2"
-            android:background="@color/transparency_white"
+            android:textColorHint="@color/colorWhite"
             android:hint="@string/user"
             android:inputType="textPersonName"
             android:paddingHorizontal="@dimen/new_margin"
@@ -83,7 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/textbox_height"
             android:hint="@string/passw"
-            android:background="@color/transparency_white"
+            android:textColorHint="@color/colorWhite"
             android:textStyle="bold"
             android:paddingHorizontal="@dimen/new_margin"
             android:layout_marginBottom="@dimen/margin2"
@@ -93,7 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/textbox_height"
             android:hint="@string/repeat_psw"
-            android:background="@color/transparency_white"
+            android:textColorHint="@color/colorWhite"
             android:textStyle="bold"
             android:paddingHorizontal="@dimen/new_margin"
             android:layout_marginBottom="@dimen/margin2"
@@ -108,11 +108,12 @@
             android:textColor="@color/colorWhite"/>
 
         <Button
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/button_shape"
             android:id="@+id/login_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:background="@color/transparency_white"
             android:onClick="signup2"
             android:paddingHorizontal="@dimen/side_margin"
             android:text="@string/next" />
