--- a/app/src/main/res/layout/activity_singup2.xml
+++ b/app/src/main/res/layout/activity_singup2.xml
@@ -54,24 +54,23 @@
                 android:id="@+id/spinner_gender"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/textbox_height"
-                android:background="@color/transparency_white"
                 android:layout_marginBottom="@dimen/margin2"/>
 
             <EditText
                 android:id="@+id/date"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/textbox_height"
-                android:background="@color/transparency_white"
+                android:textColorHint="@color/colorWhite"
                 android:hint="@string/birth"
                 android:paddingHorizontal="@dimen/new_margin"
                 android:textStyle="bold"
                 android:layout_marginBottom="@dimen/margin2"
-                android:inputType="datetime"/>
+                android:inputType="numberDecimal"/>
             <EditText
                 android:id="@+id/height"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/textbox_height"
-                android:background="@color/transparency_white"
+                android:textColorHint="@color/colorWhite"
                 android:hint="@string/height"
                 android:paddingHorizontal="@dimen/new_margin"
                 android:textStyle="bold"
@@ -82,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/textbox_height"
                 android:hint="@string/weight"
-                android:background="@color/transparency_white"
+                android:textColorHint="@color/colorWhite"
                 android:textStyle="bold"
                 android:paddingHorizontal="@dimen/new_margin"
                 android:layout_marginBottom="@dimen/margin2"
@@ -128,7 +127,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/signup_title"
-        android:background="@color/transparency_white"
+        style="?android:attr/borderlessButtonStyle"
+        android:background="@drawable/button_shape"
         android:paddingHorizontal="@dimen/side_margin"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/side_margin"
