--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -41,6 +41,7 @@
         android:layout_centerInParent="true">
         <EditText
             android:textAlignment="viewStart"
+            android:textColor="@color/colorWhite"
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="@dimen/textbox_height"
