--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -83,6 +83,7 @@
 
         <EditText
             android:id="@+id/email"
+            android:textColor="@color/colorWhite"
             android:layout_width="match_parent"
             android:layout_height="@dimen/textbox_height"
             android:hint="@string/height"
@@ -103,6 +104,7 @@
         <EditText
             android:textColorHint="@color/colorWhite"
             android:id="@+id/fullname"
+            android:textColor="@color/colorWhite"
             android:layout_width="match_parent"
             android:layout_height="@dimen/textbox_height"
             android:hint="@string/weight"
