He borrado cosas y añadido otras del setings y el profile

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -71,54 +71,124 @@
         android:layout_marginBottom="@dimen/margin2"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/toolbar_workout"/>
-
-    <LinearLayout
-        android:id="@+id/updates"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingHorizontal="@dimen/btn">
+        android:gravity="center_horizontal">
+        <LinearLayout
+            android:id="@+id/updates"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingHorizontal="@dimen/btn">
 
-        <EditText
-            android:id="@+id/email"
-            android:textColor="@color/colorWhite"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/textbox_height"
-            android:hint="@string/height"
-            android:textColorHint="@color/colorWhite"
-            android:paddingHorizontal="@dimen/new_margin"
-            android:textStyle="bold"
-            android:layout_marginBottom="@dimen/new_margin"
-            android:inputType="numberDecimal"/>
-        <Button
-            style="?android:attr/borderlessButtonStyle"
-            android:background="@drawable/button_shape"
-            android:id="@+id/button4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/header_text"
-            android:text="@string/personal_settings2"
-            android:layout_marginBottom="@dimen/top_margin"/>
-        <EditText
-            android:textColorHint="@color/colorWhite"
-            android:id="@+id/fullname"
-            android:textColor="@color/colorWhite"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/textbox_height"
-            android:hint="@string/weight"
-            android:textStyle="bold"
-            android:paddingHorizontal="@dimen/new_margin"
-            android:layout_marginBottom="@dimen/new_margin"
-            android:inputType="numberDecimal"/>
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="?android:attr/borderlessButtonStyle"
-            android:background="@drawable/button_shape"
-            android:textSize="@dimen/header_text"
-            android:text="@string/personal_settings1" />
-    </LinearLayout>
+            <EditText
+                android:id="@+id/email"
+                android:textColor="@color/colorWhite"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/textbox_height"
+                android:hint="@string/height"
+                android:textColorHint="@color/colorWhite"
+                android:paddingHorizontal="@dimen/new_margin"
+                android:textStyle="bold"
+                android:layout_marginBottom="@dimen/new_margin"
+                android:inputType="numberDecimal"
+                android:onClick="updateH"/>
+            <Button
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/button_shape"
+                android:id="@+id/button4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/header_text"
+                android:text="@string/personal_settings2"
+                android:layout_marginBottom="@dimen/top_margin"/>
+            <EditText
+                android:textColorHint="@color/colorWhite"
+                android:id="@+id/fullname"
+                android:textColor="@color/colorWhite"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/textbox_height"
+                android:hint="@string/weight"
+                android:textStyle="bold"
+                android:paddingHorizontal="@dimen/new_margin"
+                android:layout_marginBottom="@dimen/new_margin"
+                android:inputType="numberDecimal"
+                android:onClick="updateW"/>
+            <Button
+                android:id="@+id/butto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/button_shape"
+                android:textSize="@dimen/header_text"
+                android:text="@string/personal_settings1"
+                android:layout_marginBottom="@dimen/top_margin"/>
+            <RadioGroup
+                android:id="@+id/dietas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/new_margin">
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
+                    android:text="@string/dieta_normal"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/small_text"/>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
+                    android:text="@string/dieta_veggie"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/small_text"/>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
+                    android:text="@string/dieta_vegan"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/small_text"/>
+            </RadioGroup>
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/button_shape"
+                android:textSize="@dimen/header_text"
+                android:text="@string/dieta"
+                android:layout_marginBottom="@dimen/top_margin"
+                android:onClick="updateD"/>
+            <!--
+            Pa el futuro
+            <EditText
+                android:textColorHint="@color/colorWhite"
+                android:id="@+id/fullna"
+                android:textColor="@color/colorWhite"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/textbox_height"
+                android:hint="@string/password"
+                android:textStyle="bold"
+                android:paddingHorizontal="@dimen/new_margin"
+                android:layout_marginBottom="@dimen/new_margin"
+                android:inputType="numberDecimal"/>
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/button_shape"
+                android:textSize="@dimen/header_text"
+                android:text="@string/uppass"
+                android:layout_marginBottom="@dimen/top_margin"
+                android:onClick="updateP"/>
+                -->
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
